# lite-anvil

./: .gitignore  BUILDING.md  Cargo.toml  Entirely  LICENSE  LSP_SUPPORT.md  README.md  changelog.md  install.ps1  install.sh  mainlyrustplan.md  manifest.json  mkdocs.yml  requirements.md
.github/workflows/: release.yml  test.yml
anvil-core/: Cargo.toml
anvil-core/src/: runtime.rs  window.rs
data/: session.json
data/assets/: file_icons.json
data/colors/: dark_default.lua  light_default.lua
data/core/: command.lua  commandview.lua  common.lua  config.lua  contextmenu.lua  dirwatch.lua  docview.lua  emptyview.lua  init.lua  nagview.lua  plugin_api.lua  project.lua  rootview.lua  start.lua  storage.lua  style.lua  syntax.lua  titleview.lua
data/plugins/: autorestart.lua  bracketmatch.lua  detectindent.lua  findfile.lua  folding.lua  language_md.lazy.json  language_md.lua  language_rust.lua  lineguide.lua  macro.lua  projectreplace.lua  projectsearch.lua  quote.lua  scale.lua  tabularize.lua  treeview.lua  (+3 more)
docs/: 404.html  README.md  api.md  index.html  mkdocs.yml  sitemap.xml
docs_src/: about.md  guide.md  index.md  installation.md
forge-core/: Cargo.toml  build.rs
lite-anvil/: Cargo.toml  build.rs
nano-anvil/: build.rs
note-anvil/: Cargo.toml  build.rs
note-anvil/src/: main.rs
scripts/: build-local-linux.sh  build-local-mac.sh  build-local-win.ps1  build-sdl3-nogl.sh  install-mac.sh
src/: main.rs  runtime.rs  window.rs
tools/: bytecode_wrap_lua.py  export_language_assets.lua  generate_language_lazy_metadata.py  verify_replacement_parity.py
(+226 files in other folders)
